<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/app_name"
                android:textSize="32sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                tools:text="@tools:sample/date/ddmmyy" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/menu"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_menu" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/il_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tv_date"
                app:layout_constraintTop_toBottomOf="@+id/tv_date">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/customer_name" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btn_min"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:clickable="true"
                android:contentDescription="@string/add"
                android:enabled="false"
                android:focusable="true"
                app:layout_constraintStart_toStartOf="@+id/il_product"
                app:layout_constraintTop_toBottomOf="@+id/il_product"
                app:srcCompat="@drawable/ic_min" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btn_plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:contentDescription="@string/minus"
                android:focusable="true"
                app:layout_constraintEnd_toEndOf="@+id/il_name"
                app:layout_constraintTop_toTopOf="@+id/btn_min"
                app:srcCompat="@drawable/ic_add" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/il_qty"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/btn_min"
                app:layout_constraintEnd_toStartOf="@+id/btn_plus"
                app:layout_constraintStart_toEndOf="@+id/btn_min">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_qty"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:maxLength="9"
                    android:hint="@string/qty"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/il_product"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:focusable="false"
                app:layout_constraintEnd_toEndOf="@+id/il_name"
                app:layout_constraintStart_toStartOf="@+id/il_name"
                app:layout_constraintTop_toBottomOf="@+id/il_name">

                <AutoCompleteTextView
                    android:id="@+id/et_product"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/choose_product_"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/il_price"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:enabled="false"
                app:layout_constraintEnd_toEndOf="@+id/btn_plus"
                app:layout_constraintStart_toStartOf="@+id/btn_min"
                app:layout_constraintTop_toBottomOf="@+id/il_qty"
                app:prefixText="@string/prefix_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/price" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/add"
                app:layout_constraintEnd_toEndOf="@+id/il_price"
                app:layout_constraintTop_toBottomOf="@+id/il_price" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_product_buy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:paddingBottom="200dp"
                app:layout_constraintTop_toBottomOf="@+id/btn_add"
                tools:itemCount="3"
                tools:listitem="@layout/item_product" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinator_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:elevation="16dp"
        app:layout_constraintStart_toStartOf="parent">

        <include layout="@layout/bottom_sheet_payment" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.constraintlayout.widget.ConstraintLayout>